--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="topicos">
                     <p class="fechar" onclick="fechamento()" >X </p>
-                    <p class="rayexplica">Olá claro Jogador, Eu me chamo Ray e vou te explicar As regras:</p></br>
+                    <p class="rayexplica">Olá claro Jogador, Eu me chamo Gojo e vou te explicar As regras:</p></br>
                     <p class="proximo" >>></p>
             </div>
         </div>
